force-app/main/default/objects/ValorX__App_Schedule__c/ValorX__App_Schedule__c.object-meta.xml
<CustomObject>
    <label>App Schedule</label>
    <nameField>
        <displayFormat>ANS-{000000000}</displayFormat>
        <label>App Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>