force-app/main/default/objects/ValorX__App_Schedule__c/fields/ValorX__Active__c.field-meta.xml
<CustomField>
    <fullName>ValorX__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>