force-app/main/default/objects/ValorX__App_Schedule__c/fields/ValorX__Cron__c.field-meta.xml
<CustomField>
    <fullName>ValorX__Cron__c</fullName>
    <label>Cron</label>
    <length>255</length>
    <type>Text</type>
</CustomField>