force-app/main/default/objects/ValorX__App_Schedule__c/fields/ValorX__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ValorX__End_Date__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>