force-app/main/default/objects/ValorX__App_Schedule__c/fields/ValorX__Max_Number_of_Executions__c.field-meta.xml
<CustomField>
    <fullName>ValorX__Max_Number_of_Executions__c</fullName>
    <label>Max Number of Executions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>